--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </header>
 
 <div class="slider">
-  <img src="/media/slide1.jpg" alt="Image 1">
-  <img src="/media/slide2.jpg" alt="Image 2">
-  <img src="/media/Suitability.jpg" alt="Image 3">
+  <img src="../media/slide1.jpg" alt="Image 1">
+  <img src="../media/slide2.jpg" alt="Image 2">
+  <img src="../media/Suitability.jpg" alt="Image 3">
 </div>
 
 <section id="about" class="about">
