--- a/index.html
+++ b/index.html
@@ -36,43 +36,55 @@
 </section>
 
 <section class="skills">
-  <h2 class="section-h2">My Skills</h2>
+  <h2 class="section-h2">My Skills and Tools</h2>
   <div class="skills-container">
     <div class="skill-box">
       <h3>Cartography</h3>
+      <!-- <h4>Tools</h4> -->
       <div class="skill-bar">
-        <h4>Tools</h4>
-        <img src="" alt="">
+        <img src="/skills/ArcGIS-Pro.png" alt="">
+        <img src="/skills/qgis-full.png" alt="">
+        <img src="/skills/matplotlib.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>Geospatial Analysis</h3>
       <div class="skill-bar">
-        <div class="skill-level" style="width: 80%;"></div>
+        <img src="/skills/ArcGIS-Pro.png" alt="">
+        <img src="/skills/qgis-full.png" alt="">
+        <img src="/skills/matplotlib.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>Remote Sensing Image Analysis</h3>
       <div class="skill-bar">
-        <div class="skill-level" style="width: 70%;"></div>
+        <img src="/skills/erdas.png" alt="">
+        <img src="/skills/google-earth-engine-logo.png" alt="">
+        <img src="/skills/matplotlib.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>Data Analysis</h3>
       <div class="skill-bar">
-        <div class="skill-level" style="width: 85%;"></div>
+        <img src="/skills/numpy-logo.png" alt="">
+        <img src="/skills/pandas.png" alt="">
+        <img src="/skills/matplotlib.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>Geospatial Data Science</h3>
       <div class="skill-bar">
-        <div class="skill-level" style="width: 75%;"></div>
+        <img src="/skills/python.png" alt="">
+        <img src="/skills/scikitlearn.png" alt="">
+        <img src="/skills/geopandas_logo.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>WebGIS</h3>
       <div class="skill-bar">
-        <div class="skill-level" style="width: 60%;"></div>
+        <img src="/skills/JavaScript.png" alt="">
+        <img src="/skills/leaflet-logo.png" alt="">
+        <img src="/skills/django-logo.png" alt="">
       </div>
     </div>
   </div>
@@ -114,6 +126,7 @@
 
 <footer>
   <p>&copy; 2025 Pallab Chakraborty. All rights reserved.</p>
+  <P>contact me!</P>
 </footer>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
