Tried by adding dots before the directory

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </header>
 
 <div class="slider">
-  <img src="../media/slide1.jpg" alt="Image 1">
-  <img src="../media/slide2.jpg" alt="Image 2">
-  <img src="../media/Suitability.jpg" alt="Image 3">
+  <img src="./media/slide1.jpg" alt="Image 1">
+  <img src="./media/slide2.jpg" alt="Image 2">
+  <img src="./media/Suitability.jpg" alt="Image 3">
 </div>
 
 <section id="about" class="about">
@@ -42,49 +42,49 @@
       <h3>Cartography</h3>
       <!-- <h4>Tools</h4> -->
       <div class="skill-bar">
-        <img src="/skills/ArcGIS-Pro.png" alt="">
-        <img src="/skills/qgis-full.png" alt="">
-        <img src="/skills/matplotlib.png" alt="">
+        <img src="./skills/ArcGIS-Pro.png" alt="">
+        <img src="./skills/qgis-full.png" alt="">
+        <img src="./skills/matplotlib.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>Geospatial Analysis</h3>
       <div class="skill-bar">
-        <img src="/skills/ArcGIS-Pro.png" alt="">
-        <img src="/skills/qgis-full.png" alt="">
-        <img src="/skills/matplotlib.png" alt="">
+        <img src="./skills/ArcGIS-Pro.png" alt="">
+        <img src="./skills/qgis-full.png" alt="">
+        <img src="./skills/matplotlib.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>Remote Sensing Image Analysis</h3>
       <div class="skill-bar">
-        <img src="/skills/erdas.png" alt="">
-        <img src="/skills/google-earth-engine-logo.png" alt="">
-        <img src="/skills/matplotlib.png" alt="">
+        <img src="./skills/erdas.png" alt="">
+        <img src="./skills/google-earth-engine-logo.png" alt="">
+        <img src="./skills/matplotlib.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>Data Analysis</h3>
       <div class="skill-bar">
-        <img src="/skills/numpy-logo.png" alt="">
-        <img src="/skills/pandas.png" alt="">
-        <img src="/skills/matplotlib.png" alt="">
+        <img src="./skills/numpy-logo.png" alt="">
+        <img src="./skills/pandas.png" alt="">
+        <img src="./skills/matplotlib.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>Geospatial Data Science</h3>
       <div class="skill-bar">
-        <img src="/skills/python.png" alt="">
-        <img src="/skills/scikitlearn.png" alt="">
-        <img src="/skills/geopandas_logo.png" alt="">
+        <img src="./skills/python.png" alt="">
+        <img src="./skills/scikitlearn.png" alt="">
+        <img src="./skills/geopandas_logo.png" alt="">
       </div>
     </div>
     <div class="skill-box">
       <h3>WebGIS</h3>
       <div class="skill-bar">
-        <img src="/skills/JavaScript.png" alt="">
-        <img src="/skills/leaflet-logo.png" alt="">
-        <img src="/skills/django-logo.png" alt="">
+        <img src="./skills/JavaScript.png" alt="">
+        <img src="./skills/leaflet-logo.png" alt="">
+        <img src="./skills/django-logo.png" alt="">
       </div>
     </div>
   </div>
@@ -103,7 +103,7 @@
     <div class="project-content">
       <h3>NDVI Analysis Tool</h3>
       <p>An innovative tool for analyzing vegetation health using satellite imagery.</p>
-      <a href="project1.html">View Project</a>
+      <a href="https://ee-pallab.projects.earthengine.app/view/ndvi-comparison">View Project</a>
     </div>
   </div>
   <div class="project-box">
