opening a new tab and changing name color

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <section id="about" class="about">
   <img src="media/CV_Profile.png" alt="">
-  <h2>Hello,<br>I am <Span style="color: rgb(255, 255, 0);">Pallab Chakraborty!</Span></h2>
+  <h2>Hello,<br>I am <Span style="color: rgba(0, 162, 255, 0.864);">Pallab Chakraborty!</Span></h2>
   <p>Cartography | Geospatial Analysis | Remote Sensing Image Analysis |<br>Data Analysis | Geospatial Data Science | WebGIS</p>
 </section>
 
@@ -103,7 +103,7 @@
     <div class="project-content">
       <h3>NDVI Analysis Tool</h3>
       <p>An innovative tool for analyzing vegetation health using satellite imagery.</p>
-      <a href="https://ee-pallab.projects.earthengine.app/view/ndvi-comparison">View Project</a>
+      <a href="https://ee-pallab.projects.earthengine.app/view/ndvi-comparison" target="_blank">View Project</a>
     </div>
   </div>
   <div class="project-box">
